syntax = "proto3";

package packets;


// 입장했을때는 랜덤으로 체력만큼 카드 받음.
// 하루 종료 시 체력만큼의 카드만 남길 수 있음.
// 이후 낮이 될때마다 카드 두장 받고 시작

message CardData {
    CardType type = 1;
    int32 count = 2;
}

/* 
    패킷 명세
*/
message C2SRegisterRequest {
    string email = 1;
    string nickname = 2;
    string password = 3;
}

message S2CRegisterResponse {
    bool success = 1;
    string message = 2;
    GlobalFailCode failCode = 3;
}

message C2SLoginRequest {
    string email = 1;
    string password = 2;
}

message S2CLoginResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
    UserData myInfo = 4;
    GlobalFailCode failCode = 5;
}

message C2SCreateRoomRequest {
    string name = 1;
    int32 maxUserNum = 2;
}

message S2CCreateRoomResponse {
    bool success = 1;
    RoomData room = 2;
    GlobalFailCode failCode = 3;
}

message C2SGetRoomListRequest {
    
}

message S2CGetRoomListResponse{
    repeated RoomData rooms = 1;
}

message C2SJoinRoomRequest {
    int32 roomId = 1;
}

message S2CJoinRoomResponse {
    bool success = 1;
    RoomData room = 2;
    GlobalFailCode failCode = 3;
}

message C2SJoinRandomRoomRequest {
}

message S2CJoinRandomRoomResponse {
    bool success = 1;
    RoomData room = 2;
    GlobalFailCode failCode = 3;
}

message S2CJoinRoomNotification {
    UserData joinUser = 1;
}

message C2SLeaveRoomRequest {

}

message S2CLeaveRoomResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CLeaveRoomNotification {
    int64 userId = 1;
}

// 게임 시작 전 역할 및 캐릭터 셔플 요청
message C2SGamePrepareRequest {

}

message S2CGamePrepareResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CGamePrepareNotification {
    RoomData room = 1;
}

message C2SGameStartRequest {

}

message S2CGameStartResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CGameStartNotification {
    GameStateData gameState = 1;
    repeated UserData users = 2;
    repeated CharacterPositionData characterPositions = 3;
}

message C2SPositionUpdateRequest {
    double x = 1;
    double y = 2;
}

message S2CPositionUpdateResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CPositionUpdateNotification {
    repeated CharacterPositionData characterPositions = 1;
}

message C2SUseCardRequest {
    CardType cardType = 1;
    int64 targetUserId = 2; // 타겟 없으면 빈 값
}

message S2CUseCardResponse { // 성공 여부만 반환하고 대상 유저 효과는 S2CUserUpdateNotification로 통지
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CUseCardNotification {
    CardType cardType = 1;
    int64 userId = 2;
    int64 targetUserId = 3; // 타겟 없으면 0
}

message S2CEquipCardNotification {
    CardType cardType = 1;
    int64 userId = 2;
}

message S2CCardEffectNotification {
    CardType cardType = 1;
    int64 userId = 2;
    bool success = 3;
}

message S2CFleaMarketNotification {
    repeated CardType cardTypes = 1;
    repeated int32 pickIndex = 2;
}

message C2SFleaMarketPickRequest {
    int32 pickIndex = 1;
}

message S2CFleaMarketPickResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CUserUpdateNotification {
    repeated UserData user = 1;
}

message S2CPhaseUpdateNotification {
    PhaseType phaseType = 1; // DAY 1, END 3 (EVENING은 필요시 추가)
    int64 nextPhaseAt = 2; // 다음 페이즈 시작 시점(밀리초 타임스탬프)
    repeated CharacterPositionData characterPositions = 3; // 변경된 캐릭터 위치
}

message C2SReactionRequest {
    ReactionType reactionType = 1; // NOT_USE_CARD = 1
}

message S2CReactionResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message C2SDestroyCardRequest {
    repeated CardData destroyCards = 1;
}

message S2CDestroyCardResponse {
    repeated CardData handCards = 1;
}

message S2CGameEndNotification {
    repeated int64 winners = 1;
    WinType winType = 2;
}

message C2SCardSelectRequest {
    SelectCardType selectType = 1; // 0: 핸드, 1: 장비, 2: 무기, 3: 디버프
    CardType selectCardType = 2; // selectType이  0일 경우 0, / 1, 2, 3일 경우 원하는 장비의 cardType
}

message S2CCardSelectResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message C2SPassDebuffRequest {
    int64 targetUserId = 1;
    CardType debuffCardType = 2;
}

message S2CPassDebuffResponse {
    bool success = 1;
    GlobalFailCode failCode = 2;
}

message S2CWarningNotification {
    WarningType warningType = 1;
    int64 expectedAt = 2; // 밀리초 타임스탬프
}

message S2CAnimationNotification {
    int64 userId = 1;
    AnimationType animationType = 2;
}

// 최상위 GamePacket 메시지
message GamePacket {
    oneof payload {
        // 회원가입 및 로그인
        C2SRegisterRequest registerRequest = 1;
        S2CRegisterResponse registerResponse = 2;
        C2SLoginRequest loginRequest = 3;
        S2CLoginResponse loginResponse = 4;

        // 방 생성
        C2SCreateRoomRequest createRoomRequest = 5;
        S2CCreateRoomResponse createRoomResponse = 6;

        // 방 목록 조회
        C2SGetRoomListRequest getRoomListRequest = 7;
        S2CGetRoomListResponse getRoomListResponse = 8;

        // 방 참가
        C2SJoinRoomRequest joinRoomRequest = 9;
        S2CJoinRoomResponse joinRoomResponse = 10;

        // 랜덤 방 참가
        C2SJoinRandomRoomRequest joinRandomRoomRequest = 11;
        S2CJoinRandomRoomResponse joinRandomRoomResponse = 12;

        // 방 참가 알림
        S2CJoinRoomNotification joinRoomNotification = 13;

        // 방 나가기
        C2SLeaveRoomRequest leaveRoomRequest = 14;
        S2CLeaveRoomResponse leaveRoomResponse = 15;

        // 방 나가기 알림
        S2CLeaveRoomNotification leaveRoomNotification = 16;

        // 게임 시작 전 역할 및 캐릭터 셔플 요청
        C2SGamePrepareRequest gamePrepareRequest = 17;
        S2CGamePrepareResponse gamePrepareResponse = 18;
        S2CGamePrepareNotification gamePrepareNotification = 19;

        // 게임 시작
        C2SGameStartRequest gameStartRequest = 20;
        S2CGameStartResponse gameStartResponse = 21;
        S2CGameStartNotification gameStartNotification = 22;

        // 위치 업데이트
        C2SPositionUpdateRequest positionUpdateRequest = 23;
        S2CPositionUpdateNotification positionUpdateNotification = 24;

        // 카드 사용
        C2SUseCardRequest useCardRequest = 25;
        S2CUseCardResponse useCardResponse = 26;

        // 카드 효과 알림
        S2CUseCardNotification useCardNotification = 27;
        S2CEquipCardNotification equipCardNotification = 28;
        S2CCardEffectNotification cardEffectNotification = 29;

        // 플리마켓
        S2CFleaMarketNotification fleaMarketNotification = 30;
        C2SFleaMarketPickRequest fleaMarketPickRequest = 31;
        S2CFleaMarketPickResponse fleaMarketPickResponse = 32;

        // 카드 사용 등으로 인한 유저 정보 업데이트
        S2CUserUpdateNotification userUpdateNotification = 33;
        
        // 페이즈 업데이트
        S2CPhaseUpdateNotification phaseUpdateNotification = 34;

        // 리액션
        C2SReactionRequest reactionRequest = 35;
        S2CReactionResponse reactionResponse = 36;

        // 턴 종료시 (phaseType 3) 카드 버리기
        C2SDestroyCardRequest destroyCardRequest = 37;
        S2CDestroyCardResponse destroyCardResponse = 38;

        // 게임 종료
        S2CGameEndNotification gameEndNotification = 39;

        // 카드 선택
        C2SCardSelectRequest cardSelectRequest = 40;
        S2CCardSelectResponse cardSelectResponse = 41;

        // 디버프 넘기기
        C2SPassDebuffRequest passDebuffRequest = 42;
        S2CPassDebuffResponse passDebuffResponse = 43;
        S2CWarningNotification warningNotification = 44;

        // 효과 알림
        S2CAnimationNotification animationNotification = 45;
    }
}

enum WarningType {
    NO_WARNING = 0;
    BOMB_WANING = 1;
}

enum WinType {
    TARGET_AND_BODYGUARD_WIN = 0;
    HITMAN_WIN = 1;
    PSYCHOPATH_WIN = 2;
}

enum AnimationType {
    NO_ANIMATION = 0;
    SATELLITE_TARGET_ANIMATION = 1;
    BOMB_ANIMATION = 2;
    SHIELD_ANIMATION = 3;
}
